--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,53 @@ body {
 }
 
 .logo {
-    margin-top: 60%;
-    margin-left: 10%;
-    height: 50rem;
+    top: 70%;
+    height: 60rem;
+    margin-left: 18%;
+	position: absolute;   
 }
 
-.cerrar {
+.desaparecer {
 	transform: translateY(-100%);
 	transition: all 0.5s;
 }
 
+.visible {
+	overflow-Y: show; 
+}
+
+.imgPortada {
+    height: 100vh;
+    width: 100%;
+
+}
+.login {
+    top: 80%;
+    padding: 2.2%;
+    font-size: 3em;
+    border: solid #fff;
+    border-radius: 10px;
+}
+
+.signUp {
+    top: 80%;
+	padding: 2.6%;
+	font-size: 3em;
+	border-radius: 10px;
+	background: -webkit-linear-gradient(left, rgb(126, 35, 165) 0%, rgb(99, 17, 106) 0%, rgb(173, 35, 127) 66%, rgb(226, 30, 161) 100%);
+}
+
+.portada {
+	position: relative;
+}
+
+.portada a {
+	color: #FFF;
+	position: absolute;
+	text-align: center;
+	text-decoration: none;
+}
+
+.right {
+	left: 50%;
+}
