--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,121 @@
 body {
 	margin: 0;
-  	overflow-Y: hidden;
+	font-family: sans-serif;
+	text-align: center;
 }
 
-.container {
+.loading{
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
 	position: absolute;
-	top: 0;
-	background:-webkit-linear-gradient(top, rgba(94,14,110,1) 0%, rgb(247,47,150) 42%, rgb(247,47,150) 65%, rgb(112,28,122) 100%);
-	width: 100%;
-	min-height: 100vh;
-	display: flex;
+	background: -webkit-linear-gradient(top, rgba(94,14,110,1) 0%, rgb(247,47,150) 42%, rgb(247,47,150) 65%, rgb(112,28,122) 100%);
 }
 
-.logo {
-    margin-top: 60%;
-    margin-left: 10%;
-    height: 50rem;
+.loading img {
+    width: 40%;
+    margin: 65% 30%;
 }
 
-.cerrar {
-	transform: translateY(-100%);
-	transition: all 0.5s;
+.imgPortada {
+    width: 100%;
+    height: 100vh;
 }
 
+.btn {
+    bottom: 5rem;
+    color: #fff;
+    font-size: 1.3em;
+    position: absolute;
+    text-decoration: none;
+}
+
+.login {
+	width: 25%;
+    padding: 2.2%;
+    margin-right: 50%;
+    text-align: center;
+    display: inline-block;
+    border-radius: 0.4rem;
+	border: solid 1px #fff;
+}
+
+.signUp {
+	width: 25%;
+	color: #fff;
+    padding: 2.8%;
+    margin-left: 50%;
+    text-align: center;
+    border-radius: 0.4rem;
+    display: inline-block;
+    text-decoration: none;
+    background: -webkit-linear-gradient(left, rgb(126, 35, 165) 0%, rgb(99, 17, 106) 0%, rgb(173, 35, 127) 66%, rgb(226, 30, 161) 100%);
+}
+
+.iconBack {
+    top: 4%;
+    left: 6%;
+    color: #000;
+    font-size: 2em;
+    position: absolute;
+}
+
+.titleSignUp {
+    font-size: 2em;
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+
+.pSignUp {
+	margin-top: 5%;
+    margin-bottom: 3%;
+}
+
+.lineaDivisora {
+    margin-bottom: 3%;
+	border-bottom: solid #ccc;
+}
+
+.inputSign {
+	border: solid 1px #ccc;
+}
+
+.separacionDivs {
+	display: inline;
+}
+
+.banderaSign {
+	width: 5%;
+}
+
+.nextF {
+    bottom: 0;
+    height: 10%;
+	position: fixed;
+    background: -webkit-linear-gradient(left, rgb(32, 7, 43) 0%, rgb(33, 8, 35) 0%, rgb(177, 42, 132) 66%, rgb(226, 30, 161) 100%);
+}
+
+.textNextF {
+    left: 43%;
+    color: #fff;
+    margin: 4% 0%;
+    font-size: 2em;
+    position: absolute;
+    text-decoration: none;
+}
+
+.numCode {
+	width: 10%;
+    font-size: 20px;
+    text-align: center;
+    border-bottom: solid 1px #ccc;
+}
+
+.bordeDatos {
+    display: inline-flex;
+    border: solid 1px #ccc;
+}
+
+.areaTerminos {
+    margin-top: 12%;
+}
