--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 body {
-    margin: 0;
-    font-family: sans-serif;
-    text-align: center;
+	margin: 0;
+	font-family: sans-serif;
+	text-align: center;
 }
 
 .loading{
     z-index: 100;
     width: 100vw;
     height: 100vh;
-    position: absolute;
-    background: -webkit-linear-gradient(top, rgba(94,14,110,1) 0%, rgb(247,47,150) 42%, rgb(247,47,150) 65%, rgb(112,28,122) 100%);
+	position: absolute;
+	background: -webkit-linear-gradient(top, rgba(94,14,110,1) 0%, rgb(247,47,150) 42%, rgb(247,47,150) 65%, rgb(112,28,122) 100%);
 }
 
 .loading img {
@@ -31,18 +31,18 @@ body {
 }
 
 .login {
-    width: 25%;
+	width: 25%;
     padding: 2.2%;
     margin-right: 50%;
     text-align: center;
     display: inline-block;
     border-radius: 0.4rem;
-    border: solid 1px #fff;
+	border: solid 1px #fff;
 }
 
 .signUp {
-    width: 25%;
-    color: #fff;
+	width: 25%;
+	color: #fff;
     padding: 2.8%;
     margin-left: 50%;
     text-align: center;
@@ -67,31 +67,33 @@ body {
 }
 
 .pSignUp {
-    margin-top: 5%;
+	margin-top: 5%;
     margin-bottom: 3%;
 }
 
 .lineaDivisora {
     margin-bottom: 3%;
-    border-bottom: solid #ccc;
+	border-bottom: solid #ccc;
 }
 
 .inputSign {
-    border: solid 1px #ccc;
+	border: solid 1px #ccc;
+    padding: 2%;
+    width: 80%;
 }
 
 .separacionDivs {
-    display: inline;
+	display: inline;
 }
 
 .banderaSign {
-    width: 5%;
+	width: 5%;
 }
 
 .nextF {
     bottom: 0;
     height: 10%;
-    position: fixed;
+	position: fixed;
     background: -webkit-linear-gradient(left, rgb(32, 7, 43) 0%, rgb(33, 8, 35) 0%, rgb(177, 42, 132) 66%, rgb(226, 30, 161) 100%);
 }
 
@@ -105,7 +107,7 @@ body {
 }
 
 .numCode {
-    width: 10%;
+	width: 10%;
     font-size: 20px;
     text-align: center;
     border-bottom: solid 1px #ccc;
@@ -114,6 +116,7 @@ body {
 .bordeDatos {
     display: inline-flex;
     border: solid 1px #ccc;
+    padding: 1.2%;
 }
 
 .bordeEmail {
@@ -122,4 +125,56 @@ body {
 
 .areaTerminos {
     margin-top: 12%;
+}
+
+.iconEmail {
+    position: absolute;
+    left: 7%;
+}
+
+.aTerminos {
+    text-decoration: none;
+    color: #13887d;
+}
+
+.logoHeaderMap {
+    width: 25%;
+}
+.iconUsuario {
+    top: 3%;
+    left: 9%;
+    font-size: 3em;
+    position: fixed;
+}
+
+.iconMap {
+    top: 3%;
+    right: 9%;
+    position: fixed;
+    font-size: 3.3em;
+}
+
+.direccionUsuario {
+    top: 75%;
+    left: 2%;
+    position: fixed;
+}
+
+.bordeDireccion {
+    padding: 4%;
+    margin-bottom: 5%;
+    border-radius: 0.5rem;
+    border: solid #ccc 1px;
+}
+
+.bordeSetPickup {
+    color: #fff;
+    padding: 4%;
+    border-radius: 0.5rem;
+    border: solid #ccc 1px;
+    background: -webkit-linear-gradient(left, rgb(32, 7, 43) 0%, rgb(33, 8, 35) 0%, rgb(177, 42, 132) 66%, rgb(226, 30, 161) 100%);
+}
+
+::-webkit-input-placeholder {
+   font: 1.3em verdana, sans-serif;
 }
